syntax = "proto3";

package advancedhttp.options.gloo.solo.io;


import "google/protobuf/empty.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.config.health_checker.advanced_http.v2";
option java_outer_classname = "AdvancedHttp";
option java_multiple_files = true;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/advanced_http";

enum HealthCheckResult {
    default = 0; // context-specific, defaults to one of the following values
    healthy = 1;
    degraded = 2;
    unhealthy = 3;
}

message ResponseAssertions {

    // A bunch of match rules, the first match wins out and short-circuits
    repeated ResponseMatcher response_matchers = 1;

    // The default health response if none of the response health checks were matches.
    // If omitted, defaults to unhealthy.
    HealthCheckResult no_match_health = 2;
}

// Defines a transformation template.
message ResponseMatcher {

    // Defines the parameters to determine a single match
    ResponseMatch response_match = 1;

    // The health response if this response_match is a match.
    // If omitted, defaults to healthy
    HealthCheckResult match_health = 2;
}

// ResponseMatches can be used to extract information from the request/response.
message ResponseMatch {

    // Configuration to get the json key.
    // Treats the body as raw text if omitted.
    JsonKey json_key = 1;

    // If set to true, Envoy will not throw an exception in case the json body parsing
    // fails.
    bool ignore_error_on_parse = 2;

    // The source of the extraction
    oneof source {
        // Extract information from headers
        string header = 3;
        // Extract information from the request/response body
        google.protobuf.Empty body = 4;
    }

    // Only strings matching this regular expression will be considered a match.
    // The most simple value for this field is '.*', which matches the
    // whole source. The field is required.
    string regex = 5;
}

message JsonKey {

    // Specifies the segment in a path to retrieve value.
    message PathSegment {

        oneof segment {
            option (validate.required) = true;

            // If specified, use the key to retrieve the value.
            // If the key is not found, the value defaults to empty string.
            string key = 1 [(validate.rules).string = {min_len: 1}];
        }
    }

    // The path to retrieve the Value.
    repeated PathSegment path = 2 [(validate.rules).repeated = {min_items: 1}];
}